<resources>
    <string name="app_name">Bite Mexico</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tag_line">TAG LINE</string>
    <string name="app_id">513396995498822</string>
    <string name="g_map_id">AIzaSyAVX6KWN9EIUfsGESJVGvpQPGVVAnYn8Cc</string>
    <string name="pk_test">pk_test_kfsjV0T4mJnVzGkjMwYAKAAY</string>
    <string name="pk_live">pk_live_lStRo3vDkShaOLxCJiuADcrU</string>
    <string name="text_bite_mexico">Bite México es un club de comensales a gran escala en forma de una aplicación móvil que proporciona a sus miembros descuentos en restaurantes.
        \nComer en restaurantes puede ser muy caro,esta es la principal razón para que las personas no lo hagan tan seguido como les gustaría.
        \nCon nuestra aplicación intuitiva serás capaz de localizar todos nuestros restaurantes participantes con solo tocar un botón y ahorrarás cientos o miles de pesos en el transcurso del año.</string>
    <string name="header_title_membership_plan">Sleecciona el tipo de membresía</string>
    <string name="text_membership_one_month">Free trial is for one month</string>
    <string name="text_membership_six_month">6 months Membership</string>
    <string name="text_membership_twelve_month">12 months Membership</string>
    <string name="tag_at">at</string>
    <string name="text_sign_up">Regístrate</string>
    <string name="text_price_1">$0.00</string>
    <string name="text_price_6">$49.00</string>
    <string name="text_price_12">$89.00</string>
    <string name="header_coming_soon">Coming Soon</string>
    <string name="title_activity_membership">MembershipActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="step_1_title">Lista De Restaurantes</string>
    <string name="step_1_plan">Tipo de Plan:</string>
    <string name="step_1_plan_val">6 Month Plan</string>
    <string name="step_2_plan_val">3 Month Plan</string>
    <string name="step_1_price">Precio:</string>
    <string name="step_1_price_val">$0</string>
    <string name="step_1_time">Tiempo:</string>
    <string name="step_1_time_val">6 Months</string>
    <string name="step_2_time_val">3 Months</string>
    <string name="step_1_plan_total">Total:</string>
    <string name="step_1_sub_total">Subtotal:</string>
    <string name="step_1_sub_tota_val">$49.00</string>
    <string name="step_2_sub_tota_val">$00.00</string>
    <string name="step_1_promo_code">Ingresa el Código de Promoción:</string>
    <string name="step_1_promo_code_val">SD75</string>
    <string name="step_1_total">Total:</string>
    <string name="step_1_total_val">$47.00</string>
    <string name="step_2_total_val">$00.00</string>
    <string name="step_1_user_name">Dean Nrris</string>
    <string name="step_1_email">Deannrris@gmail.com</string>
    <string name="btn_apply">Aplicar</string>
    <string name="btn_place_orger">Realizar Pedido</string>
    <string name="text_reg_step_2_card_number">Número de tarjeta</string>
    <string name="text_reg_step_2_card_type">Tipo de tarjeta</string>
    <string name="text_reg_step_2_expiry_date">Fecha de caducidad</string>
    <string name="text_reg_step_2_cvc_number">Número CVV</string>
    <string name="home_restaurant_title">Restaurant Listing</string>
    <string name="home_filter">FILTRO</string>
    <string name="home_search_nearby">Search restaurants nearby</string>
    <string name="filter_title">FILTRO</string>
    <string name="filter_people">Núm. De Personas</string>
    <string name="filter_cuisine">Tipo de Comida</string>
    <string name="filter_offer_type">Tipo de Oferta</string>
    <string name="filter_text_availablity">Disponibilidad</string>
    <string name="filter_done">Enviar</string>
    <string name="filter_offer_1">2 x 1 en alimentos</string>
    <string name="filter_offer_2">50% de descuento en alimentos</string>
    <string name="r_detail_title">GBK-Manchester</string>
    <string name="r_detail_adr_1">1 Lindsey Street</string>
    <string name="r_detail_adr_2">Suite C Second Floor</string>
    <string name="r_detail_adr_city">London</string>
    <string name="r_detail_btn_checkin">Registrarse</string>
    <string name="r_detail_btn_share">SHARE</string>
    <string name="r_detail_tab_detail">DETALLES</string>
    <string name="r_detail_tab_gallery">GALERIA</string>
    <string name="r_detail_tab_review">COMENTARIOS</string>
    <string name="text_dummy">It\'s very amazing food i ever had , Me and my family enjoyed a lot. very nice place to visit.\n Need to improve service !</string>
    <string name="search_text_hint">Ingrese nombre del restaurante</string>
    <string name="title">Title</string>
    <string name="setting_header">Ajustes</string>
    <string name="setting_user">Usuario </string>
    <string name="setting_city">Selecciona tu Ciudad </string>
    <string name="setting_change_plan">Mi membresía actualmente</string>
    <string name="setting_about_us">Quienes Somos</string>
    <string name="term_n_condition">Terminos y Condiciones</string>
    <string name="setting_how_it_work">Como Funciona Bite Mexico</string>
    <string name="search_header">Buscar</string>
    <string name="near_header">Cerca De Mi</string>
    <string name="setting_city_text">Selecciona tu ciudad, paraver nuestra lista de restaurantes que están disponibles en tu ciudad. Estos establecimientos aparecerán en tu tabla de restaurantes.</string>
    <string name="text_reveiew_empty">Ser el primero en hacer un comentario</string>
    <string name="text_checkin_confirm_message">El establecimiento deberá llenar</string>
    <string name="text_about_us"> Bite México es un club de comensales a gran escala en forma de una aplicación móvil que proporciona a sus miembros descuentos en restaurantes.\n\nComer en restaurantes puede ser muy caro, esta es la principal razón por la que mucha gente no lo hace tan seguido como le gustaría, con nuestra aplicación intuitiva serás capaz de localizar todos los restaurantes participantes, con solo tocar un botón ahorrarás cientos o miles de pesos en el transcurso del año.\n\nEn Bite México tenemos dos objetivos: ayudar a nuestros miembros a que comer en restaurantes sea más económico y al mismo tiempo ayudamos a los restaurantes a fomentar que nuestros los usuarios coman en sus establecimientos con mayor frecuencia.\n\nTodos nuestros restaurantes ofrecerán descuentos ilimitadamente a los usuarios de Bite esto quiere decir que nuestros miembros no están limitados a usar sus descuentos solo una vez, ellos pueden regresar al mismo restaurant cuantas veces lo deseen, con nuestra membresía Bite México ellos pueden conseguir a mitad de precio sus alimentos en los restaurantes participantes (Ya sea 50% de descuento o 2 por 1 en algunos alimentos o incluso todo el menú esto dependerá de nuestros restaurantes participantes.)</string>
    <string name="how_bitebc_text1">Obteniendo tu membresía Bite México conseguirás el 50% de descuento o el 2x1 de algunos alimentos en nuestros restaurantes participantes.</string>
    <string name="how_bitebc_text2"> importante: debes llamar y reservar mencionando que eres miembro de bite mexico. a menos que el icono de llamar no aparezca.</string>
    <string name="how_bitebc_text3"> 50; - El restaurant ofrece 50 de descuento en el consumo de alimentos a los miembros de Bite México</string>
    <string name="how_bitebc_text4"> El restaurant ofrece el 2x1 a nuestros miembros en su consumo de alimentos</string>
    <string name="how_bitebc_text5"> Deberás llamar para reservar y avisar queeres miembro de Bite México</string>
    <string name="how_bitebc_text6"> Las ofertas para los miembros de Bite México no están disponibles Los viernes después de las 18:30 hrs</string>
    <string name="how_bitebc_text7"> Las ofertas para los miembros de Bite México no están disponibles los sábados después de las 18:00 hrs</string>
    <string name="how_bitebc_text8"> Las ofertas para los miembros de Bite México no están disponibles durante la temporada del 15 de Diciembreal 1 de Enero.</string>
    <string name="how_bitebc_text9"> Indica el Número máximo de personas que pueden reservar con membresía Bite México</string>
</resources>