<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_l_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_d_green"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/btn_header_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/header_title"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/header_title"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/back_button_selector"
            android:clickable="true" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Revisa Tu Pedido"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="40"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_plan"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>

                <TextView
                    android:id="@+id/planName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="60"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_plan_val"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="40"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_price"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>

                <TextView
                    android:id="@+id/planPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_weight="60"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_price_val"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="40"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_time"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>

                <TextView
                    android:id="@+id/planTimePeriod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_weight="60"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_time_val"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="40"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_sub_total"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>

                <TextView
                    android:id="@+id/subTotalPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_weight="60"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_sub_tota_val"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/couponLayout"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="38"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_promo_code"
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </TextView>

                <EditText
                    android:id="@+id/edt_coupon_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                   
                    android:layout_weight="30"
                    android:background="@drawable/editbox_corner_selector"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2sp"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textColor="@color/_l_black"
                    android:textSize="15sp" >
                </EditText>

                <TextView
                    android:id="@+id/apply_coupn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:background="@color/_d_green"
                    android:clickable="true"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/btn_apply"
                    android:textColor="@color/_l_white"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/white"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="40"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_total"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" >
                </TextView>

                <TextView
                    android:id="@+id/totalValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_weight="60"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/step_1_total_val"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/white"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/user_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/user" />

                <TextView
                    android:id="@+id/text_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignBottom="@+id/user_img"
                    android:layout_alignTop="@+id/user_img"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/user_img"
                    android:text="@string/step_1_user_name"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" >
                </TextView>

                <ImageView
                    android:id="@+id/email_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignLeft="@+id/user_img"
                    android:layout_alignRight="@+id/user_img"
                    android:layout_below="@+id/user_img"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/email_" />

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignBottom="@+id/email_img"
                    android:layout_alignTop="@+id/email_img"
                    android:layout_below="@+id/text_user_name"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/email_img"
                    android:text="@string/step_1_email"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" >
                </TextView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <CheckBox
                    android:id="@+id/terms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="10"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/label_terms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="33"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:textColor="#000000"
                    android:text="He leído y estoy de acuerdo en los"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/t_n_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="33"
                    android:clickable="true"
                    android:gravity="left"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="Términos y Condiciones"
                    android:textColor="#0000ff"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_place_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:background="@color/_d_green"
                android:text="@string/btn_place_orger"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>